# quiz_correcter

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: player1.txt  player2.txt  player3.txt
quiz_correcter/: __init__.py  __main__.py  charts.py  colorbox.py
